# ECE494-MUR

./: .gitignore  README.md  esp_setup.bash  pitch_controller.slx  pitch_controller.slx.autosave
Matlab_Models/: controller.slx
calculations/: control_sys.slx  equations_of_motion.m  thr_conf_mat.m
esp32/sensors/: CMakeLists.txt
esp32/sensors/main/: CMakeLists.txt  sensors.c
old_system_monitor/app/: CMakeLists.txt
old_system_monitor/app/main/: CMakeLists.txt  app.c
old_system_monitor/app/sys_common/: CMakeLists.txt
pwm_controller/: CMakeLists.txt
pwm_controller/drivers/adc/: adc.c
pwm_controller/drivers/mpu9250/: CMakeLists.txt  mpu9250.c
pwm_controller/drivers/ms5837/: CMakeLists.txt  bar30.cpp  ms5837.c
pwm_controller/drivers/pwm/: CMakeLists.txt  (+1 more)
pwm_controller/main/: CMakeLists.txt  pwm_controller.c
pwm_controller/sys_common/: CMakeLists.txt  sys_common.c
ros2_ws/: AGENTS.md  spi_test.yaml
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/launch/: groundstation_launch.py  jetson_launch.bash  teleop_joy.launch.py  test_spi.yaml
ros2_ws/log/: latest_build
ros2_ws/src/jetson/: CMakeLists.txt  package.xml
ros2_ws/src/jetson/include/jetson/: crc.cpp  crc.hpp  crc_lookup.hpp  data_struct.hpp
ros2_ws/src/jetson/launch/: game_controller.launch.py
ros2_ws/src/jetson/src/: controller_processing.cpp  dualsense.cpp  spi_interface.cpp  testing.cpp
sensor_controller/: CMakeLists.txt
sensor_controller/app/: CMakeLists.txt
sensor_controller/drivers/: CMakeLists.txt
sensor_controller/main/: CMakeLists.txt
system_monitor/: CMakeLists.txt  sdkconfig
system_monitor/app/: CMakeLists.txt
system_monitor/app/main/: CMakeLists.txt  app.c  setup.c
system_monitor/drivers/: CMakeLists.txt  drivers.c
system_monitor/main/: CMakeLists.txt  system_monitor.c
system_monitor/sys_common/: sys_common.c
test_files/: a.out  create_lookup_table.py  inverse_thr_matrix.py  posix_testing.cpp  posix_write.cpp
(+226 files in other folders)
